# OcctStuff

./: .gitignore  INITIALIZATION_FIX.md  README.md  requirements.txt  test_settings_init.py
models_kernel/: snn_kernel_v3.pth
scripts/: env.sh  installpyton.sh
sources/: server.py
sources/helloworld/: ADVANCED_EVOLUTION.md  AGENT_ARCHITECTURE.md  BUILDING_RENDER_FIX.md  CHANGES_SUMMARY.md  COMMANDS.md  EVOLUTION_GUIDE.md  FIX_LOG.md  IMPLEMENTATION_SUMMARY.md  LIVE_DEMO_COMPLETE.md  LIVE_DEMO_GUIDE.md  OPTIMIZATION_LOG.md  PROJECT_SUMMARY.md  QUICKSTART_LIVE.md  README.md  ROLE_SYSTEM.md  UPDATE_20251020_2.md  WHICH_DEMO.md  pyproject.toml  run_advanced.sh  start_evolution_demo.sh  start_live_demo.sh
sources/helloworld/core/: advanced_agent.py  agent.py  agent_evolved.py  expandable_world.py  world.py
sources/helloworld/logic/: bf_interpreter.py  role_tools.py  tools.py  tools_advanced.py  tools_evolved.py
sources/helloworld/policy/: policy_advanced.py  tiny_policy.py  tiny_policy_evolved.py
sources/helloworld/run/: advanced_evolution_demo.py  evolution_demo.py  live_demo.py  sim.py
sources/helloworld/tests/: test_bf.py  test_live.py  test_world.py
sources/helloworld/viz/: advanced_render.py  render.py
test/: Catmull-Rom.py  banchi.py  chamber.py  debug_boundary.py  fillet.py  find_sharp_edge.py  focnn.py  focnn2.py  focnn3.py  focnn4.py  focnn5.py  focnn6.py  gen_test00.py  gen_test01.py  graph.html  lll.py  node.py  nut.py  orginic.py  orginic2.py  orginic4.py  orginic5.py  originic3.py  ppt.html  show.py  test.ipynb  test.json  test.py  test00.py  (+5 more)
(+124 files in other folders)
